# etymora

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  flake.nix  stylua.toml  template.env
.github/workflows/: build.yml  check.yaml
config-examples/: etymora.lua
crates/adapter-example/: Cargo.toml
crates/adapter-example/src/: lib.rs
crates/adapter-wiktionary/: Cargo.toml
crates/adapter-wiktionary/src/: entry.rs  error.rs  lib.rs
crates/etymora/: Cargo.toml
crates/etymora-macros/: Cargo.toml
crates/etymora-macros/src/: lib.rs
crates/etymora-traits/: Cargo.toml
crates/etymora-traits/src/: lib.rs
crates/etymora/src/: dict_handler.rs  error.rs  main.rs  server.rs  text_document.rs
crates/example-adapter/: Cargo.toml
crates/example-adapter/src/: lib.rs
