[workspace]

members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["satler-git"]
edition = "2021"
license = "MIT"
repository = "https://github.com/satler-git/etymora"
publish = false

# version.workspace = true
# authors.workspace = true
# edition.workspace = true
# license.workspace = true
# repository.workspace = true
# publish.workspace = true

[workspace.dependencies]
markdown-builder = "1.0.0"
