[package]
name                   = "adapter-wiktionary"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
etymora-traits       = { path = "../etymora-traits/" }
rustc-hash.workspace = true
serde.workspace      = true
thiserror.workspace  = true
tracing.workspace    = true

tokio.workspace = true

# etymora-macros = { path = "../etymora-macros/" }

[dev-dependencies]
tokio.workspace = true
