[package]
name = "etymora-traits"

version.workspace      = true
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
lsp-types.workspace = true
serde.workspace     = true
