[package]
name                   = "etymora"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
clap      = { version = "4.5.21", features = ["derive"] }
shadow-rs = "0.36.0"

async-lsp = { version = "0.2.1", features = ["tokio", "tracing"] }

etymora-traits  = { path = "../etymora-traits/" }
example-adapter = { path = "../example-adapter/" }

futures             = "0.3.31"
thiserror.workspace = true
tokio.workspace     = true
tower               = { version = "0.5.1", features = ["full"] }
tracing.workspace   = true
tracing-subscriber  = "0.3.18"

[build-dependencies]
shadow-rs = "0.36.0"
