[package]
name                   = "etymora"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
clap      = { version = "4.5.21", features = ["derive"] }
shadow-rs = "0.37.0"

lsp-server          = "0.7.7"
lsp-types.workspace = true

serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"

adapter-example = { path = "../adapter-example/" }
etymora-traits  = { path = "../etymora-traits/" }

tokio.workspace = true

thiserror.workspace = true

tracing.workspace  = true
tracing-subscriber = "0.3.18"

either       = "1.13.0"
jemallocator = { version = "0.5.4", optional = true }
mimalloc     = { version = "0.1.43", optional = true }

rustc-hash.workspace = true

[build-dependencies]
shadow-rs = "0.37.0"

[dev-dependencies]
tempfile = "3.14.0"

[features]
default  = []
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]
