[package]
name                   = "example-adapter"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
etymora-traits      = { path = "../etymora-traits/" }
thiserror.workspace = true
tracing.workspace   = true

[dev-dependencies]
tokio.workspace = true
